Mise en place d'une dependance multer pour l'image
