# swagger.json
@@ -11,6 +11,20 @@
       "description": "Dev local"
     }
   ],
+  "tags": [
+    {
+      "name": "Catégories",
+      "description": "Gestion des catégories de produits"
+    },
+    {
+      "name": "Fournisseurs",
+      "description": "Gestion des fournisseurs"
+    },
+    {
+      "name": "Produits",
+      "description": "Gestion des produits"
+    }
+  ],
   "components": {
     "schemas": {
       "Categorie": {
@@ -96,13 +110,39 @@
       },
       "Produit": {
         "type": "object",
-        "required": [
-          "libelle",
-          "qte",
-          "prix",
-          "categoryId",
-          "fournisseurId"
-        ],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "example": 1
+          },
+          "libelle": {
+            "type": "string",
+            "example": "Tomate"
+          },
+          "qte": {
+            "type": "integer",
+            "example": 5
+          },
+          "prix": {
+            "type": "number",
+            "example": 1500
+          },
+          "image": {
+            "type": "string",
+            "example": "https://res.cloudinary.com/xxx/image/upload/produits/abc.jpg"
+          },
+          "categoryId": {
+            "type": "integer",
+            "example": 1
+          },
+          "fournisseurId": {
+            "type": "integer",
+            "example": 1
+          }
+        }
+      },
+      "ProduitFormData": {
+        "type": "object",
         "properties": {
           "libelle": {
             "type": "string",
@@ -118,32 +158,9 @@
             "type": "number",
             "example": 1500
           },
-          "categoryId": {
-            "type": "integer",
-            "example": 1
-          },
-          "fournisseurId": {
-            "type": "integer",
-            "example": 1
-          }
-        }
-      },
-      "UpdateProduit": {
-        "type": "object",
-        "properties": {
-          "libelle": {
+          "image": {
             "type": "string",
-            "example": "Tomate"
-          },
-         "qte": {
-            "type": "integer",
-            "minimum": 1,
-            "maximum": 10,
-            "example": 5
-          },
-          "prix": {
-            "type": "number",
-            "example": 1500
+            "format": "binary"
           },
           "categoryId": {
             "type": "integer",
@@ -171,6 +188,9 @@
   "paths": {
     "/categories": {
       "get": {
+        "tags": [
+          "Catégories"
+        ],
         "summary": "Récupérer toutes les catégories",
         "responses": {
           "200": {
@@ -189,6 +209,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Catégories"
+        ],
         "summary": "Ajouter une catégorie",
         "requestBody": {
           "required": true,
@@ -219,6 +242,9 @@
     },
     "/categories/{id}": {
       "get": {
+        "tags": [
+          "Catégories"
+        ],
         "summary": "Récupérer une catégorie par ID",
         "parameters": [
           {
@@ -242,6 +268,9 @@
         }
       },
       "patch": {
+        "tags": [
+          "Catégories"
+        ],
         "summary": "Mettre à jour une catégorie par ID",
         "parameters": [
           {
@@ -278,6 +307,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Catégories"
+        ],
         "summary": "Supprimer une catégorie par ID",
         "parameters": [
           {
@@ -296,6 +328,9 @@
     },
     "/fournisseurs": {
       "get": {
+        "tags": [
+          "Fournisseurs"
+        ],
         "summary": "Récupérer tous les fournisseurs",
         "responses": {
           "200": {
@@ -314,6 +349,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Fournisseurs"
+        ],
         "summary": "Ajouter un fournisseur",
         "requestBody": {
           "required": true,
@@ -344,6 +382,9 @@
     },
     "/fournisseurs/{id}": {
       "get": {
+        "tags": [
+          "Fournisseurs"
+        ],
         "summary": "Récupérer un fournisseur par ID",
         "parameters": [
           {
@@ -367,6 +408,9 @@
         }
       },
       "patch": {
+        "tags": [
+          "Fournisseurs"
+        ],
         "summary": "Mettre à jour un fournisseur par ID",
         "parameters": [
           {
@@ -403,6 +447,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Fournisseurs"
+        ],
         "summary": "Supprimer un fournisseur par ID",
         "parameters": [
           {
@@ -421,6 +468,9 @@
     },
     "/produits": {
       "get": {
+        "tags": [
+          "Produits"
+        ],
         "summary": "Récupérer tous les produits",
         "responses": {
           "200": {
@@ -439,13 +489,52 @@
         }
       },
       "post": {
+        "tags": [
+          "Produits"
+        ],
         "summary": "Ajouter un produit",
         "requestBody": {
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
-                "$ref": "#/components/schemas/Produit"
+                "type": "object",
+                "required": [
+                  "libelle",
+                  "qte",
+                  "prix",
+                  "image",
+                  "categoryId",
+                  "fournisseurId"
+                ],
+                "properties": {
+                  "libelle": {
+                    "type": "string",
+                    "example": "Tomate"
+                  },
+                  "qte": {
+                    "type": "integer",
+                    "minimum": 1,
+                    "maximum": 10,
+                    "example": 5
+                  },
+                  "prix": {
+                    "type": "number",
+                    "example": 1500
+                  },
+                  "image": {
+                    "type": "string",
+                    "format": "binary"
+                  },
+                  "categoryId": {
+                    "type": "integer",
+                    "example": 1
+                  },
+                  "fournisseurId": {
+                    "type": "integer",
+                    "example": 1
+                  }
+                }
               }
             }
           }
@@ -469,6 +558,9 @@
     },
     "/produits/{id}": {
       "get": {
+        "tags": [
+          "Produits"
+        ],
         "summary": "Récupérer un produit par ID",
         "parameters": [
           {
@@ -492,6 +584,9 @@
         }
       },
       "patch": {
+        "tags": [
+          "Produits"
+        ],
         "summary": "Mettre à jour un produit par ID",
         "parameters": [
           {
@@ -501,9 +596,37 @@
         "requestBody": {
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
-                "$ref": "#/components/schemas/UpdateProduit"
+                "type": "object",
+                "properties": {
+                  "libelle": {
+                    "type": "string",
+                    "example": "Tomate"
+                  },
+                  "qte": {
+                    "type": "integer",
+                    "minimum": 1,
+                    "maximum": 10,
+                    "example": 5
+                  },
+                  "prix": {
+                    "type": "number",
+                    "example": 1500
+                  },
+                  "image": {
+                    "type": "string",
+                    "format": "binary"
+                  },
+                  "categoryId": {
+                    "type": "integer",
+                    "example": 1
+                  },
+                  "fournisseurId": {
+                    "type": "integer",
+                    "example": 1
+                  }
+                }
               }
             }
           }
@@ -528,6 +651,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Produits"
+        ],
         "summary": "Supprimer un produit par ID",
         "parameters": [
           {
